--- a/flower.html
+++ b/flower.html
@@ -383,7 +383,7 @@
       id="id_audio"
       src="Hozier - Do I Wanna Know _.mp3"
     ></audio>
-    <h1>TUS FLORES AMARILLAS, CON MUCHO ESFUERZO LAS HICE, TE AMO TANTO QUE SOY CAPAZ DE APRENDER ALGO SOLO POR TI</h1>
+    <h1>TUS FLORES AMARILLAS, CON MUCHO ESFUERZO LAS HICE, TE AMO TANTO MI MAFIS, APRENDI TODO ESTO DE 0</h1>
     <div class="sunflower">       
       <div class="flower_wrapper">
         <div class="flower_stem"></div>
